--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cors": "^2.8.4",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "massive": "^5.5.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
@@ -31,6 +32,6 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "main": "server/index.js",
+  "main": "./server/index.js",
   "proxy": "http://localhost:8080"
 }
